<resources>
    <string name="app_name">Daily Log</string>
    <string name="action_import">IMPORT</string>
    <string name="action_export">EXPORT</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_info">INFORMATION</string>
    <string name="action_order">ORDER CATEGORIES</string>
    <string name="action_license">LICENSE</string>
    <string name="action_save">SAVE</string>
    <string name="action_edit">EDIT</string>
    <string name="action_delete">DELETE</string>
    <string name="categoryNameText">Category Name</string>
    <string name="recordTypeText">Record Type</string>
    <string name="booleanRadioButtonText">Boolean (Yes/No, True/False ...)</string>
    <string name="numberRadioButtonText">Numeric with unit (Quantity, Duration ...)</string>
    <string name="memoRadioButtonText">Memo (Sentence, Scribble ...)</string>
    <string name="unitText">Unit</string>
    <string name="defaultValueText">Default Value</string>
    <string name="unitEditTextHint">time(s), minute, cup(s) ...</string>
    <string name="defaultValueTextHint">0, 1, 2, ...</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="dialog_message_confirm_delete_category">Delete a category?</string>
    <string name="dialog_message_confirm_delete_record">Delete a record?</string>
    <string name="memoDialogTitle">Memo</string>
    <string name="send_to">Share exported file to...</string>

    <string-array name="spinner_date_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>
